# casetools

./: README
lab1/: Makefile~  main.c~
lab1/autotools/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan
lab1/autotools/autom4te.cache/: output.1  requests  traces.0  traces.1
lab1/autotools/doxs/: Doxyfile
lab1/autotools/source/: Makefile  Makefile.am  Makefile.in  base_hero_explosion.cpp  cursors.h  end_game.cpp  enemy_hit.cpp  game_draw.cpp  game_objects.h  hero_shot.cpp  main.cpp  main.h  mouse_click.cpp  move_enemy.cpp  move_enemy.h  move_hero.cpp  pause_menu.cpp  randomize_enemy_target_coordinates.cpp  randomize_rune_coordinates.cpp  take_rune.cpp  take_rune.h  update_spawn_rune.h
lab1/make/app/: Makefile  effect_of_the_rune.cpp  game_end_window.cpp  game_end_window.h  game_process.cpp  game_process.h  menu_bar.h  pause_end_menu.h  randomize_enemy_coordinates.cpp  randomize_enemy_type.cpp  tool_bar.h  update_spawn_rune.cpp
lab1/make/app/doxs/: Doxyfile  README.md
lab1/test/app/: Makefile  main  main.cpp
lab1/test/lib/: Makefile
Лаб1/: configure
Лаб1/autom4te.cache/: output.1  requests  traces.0  traces.1
